// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  aria-disabled={false}
  className="hideOutline tapTransition rounding0 accessibilityOutline fullWidth pointer"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="box xsDisplayFlex"
  >
    <div
      className="box flexGrow marginEnd6 xsDisplayFlex"
    >
      <div
        className="box xsCol6 xsDisplayFlex"
      >
        <div
          className="Text fontSize3 darkGray alignLeft breakWord fontWeightBold truncate"
          title="test title"
        >
          test title
        </div>
      </div>
    </div>
    <div
      className="box"
    />
  </div>
</div>
`;

exports[`renders correctly with children 1`] = `
<div
  aria-disabled={false}
  className="hideOutline tapTransition rounding0 accessibilityOutline fullWidth pointer"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="box xsDisplayFlex"
  >
    <div
      className="box flexGrow marginEnd6 xsDisplayFlex"
    >
      <div
        className="box xsCol6 xsDisplayFlex"
      >
        <div
          className="Text fontSize3 darkGray alignLeft breakWord fontWeightBold truncate"
          title="test title"
        >
          test title
        </div>
      </div>
    </div>
    <div
      className="box"
    />
  </div>
</div>
`;

exports[`renders correctly with error 1`] = `
<div
  aria-disabled={false}
  className="hideOutline tapTransition rounding0 accessibilityOutline fullWidth pointer"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="box xsDisplayFlex"
  >
    <div
      className="box flexGrow marginEnd6 xsDisplayFlex"
    >
      <div
        className="box xsCol6 xsDisplayFlex"
      >
        <div
          className="box marginEnd2"
        >
          <svg
            aria-hidden={null}
            aria-label="Error icon"
            className="icon red iconBlock"
            height={16}
            role="img"
            viewBox="0 0 24 24"
            width={16}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
        <div
          className="Text fontSize3 red alignLeft breakWord fontWeightBold truncate"
          title="test title"
        >
          test title
        </div>
      </div>
    </div>
    <div
      className="box"
    />
  </div>
</div>
`;

exports[`renders correctly with icon 1`] = `
<div
  aria-disabled={false}
  className="hideOutline tapTransition rounding0 accessibilityOutline fullWidth pointer"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="box xsDisplayFlex"
  >
    <div
      className="box flexGrow marginEnd6 xsDisplayFlex"
    >
      <div
        className="box xsCol6 xsDisplayFlex"
      >
        <div
          className="box paddingX2"
        >
          <svg
            aria-hidden={null}
            aria-label="Title icon"
            className="icon darkGray iconBlock"
            height={16}
            role="img"
            viewBox="0 0 24 24"
            width={16}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
        <div
          className="Text fontSize3 darkGray alignLeft breakWord fontWeightBold truncate"
          title="test title"
        >
          test title
        </div>
      </div>
    </div>
    <div
      className="box"
    />
  </div>
</div>
`;

exports[`renders correctly with summary 1`] = `
<div
  aria-disabled={false}
  className="hideOutline tapTransition rounding0 accessibilityOutline fullWidth pointer"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="box xsDisplayFlex"
  >
    <div
      className="box flexGrow marginEnd6 xsDisplayFlex"
    >
      <div
        className="box xsCol6 xsDisplayFlex"
      >
        <div
          className="Text fontSize3 darkGray alignLeft breakWord fontWeightBold truncate"
          title="test title"
        >
          test title
        </div>
      </div>
      <div
        className="box xsCol6"
      >
        <div
          className="box paddingY1"
        >
          <div
            className="Text fontSize2 darkGray alignLeft breakWord fontWeightNormal truncate"
            title="summary1"
          >
            summary1
          </div>
        </div>
        <div
          className="box paddingY1"
        >
          <div
            className="Text fontSize2 darkGray alignLeft breakWord fontWeightNormal truncate"
            title="summary2"
          >
            summary2
          </div>
        </div>
        <div
          className="box paddingY1"
        >
          <div
            className="Text fontSize2 darkGray alignLeft breakWord fontWeightNormal truncate"
            title="summary3"
          >
            summary3
          </div>
        </div>
      </div>
    </div>
    <div
      className="box"
    />
  </div>
</div>
`;

exports[`renders correctly with when expanded 1`] = `
Array [
  <div
    aria-disabled={false}
    className="hideOutline tapTransition rounding0 accessibilityOutline fullWidth pointer"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="box xsDisplayFlex"
    >
      <div
        className="box flexGrow marginEnd6 xsDisplayFlex"
      >
        <div
          className="box xsCol12 xsDisplayFlex"
        >
          <div
            className="Text fontSize3 darkGray alignLeft breakWord fontWeightBold truncate"
            title="test title"
          >
            test title
          </div>
        </div>
      </div>
      <div
        className="box"
      >
        <button
          aria-label="arrow icon to expand or collapse the module"
          className="button tapTransition enabled"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <div
            className="pog white"
            style={
              Object {
                "height": 24,
                "width": 24,
              }
            }
          >
            <svg
              aria-hidden={true}
              aria-label=""
              className="icon darkGray iconBlock"
              height={12}
              role="img"
              viewBox="0 0 24 24"
              width={12}
            >
              <path
                d="test-file-stub"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>,
  <div
    className="box marginTop6"
  >
    <div>
      test children
    </div>
  </div>,
]
`;
